[textmate] reimplement bundles reading
- support different types of file name matchers
- more precise setting scope name for snippets and language configuration
- a way to implement custom plist content loader

GitOrigin-RevId: e03e682e60396ad5e9f207c9e4a647566d393cd5